/*
Copyright © 2024 NAME HERE <EMAIL ADDRESS>
*/
syntax = "proto3";

package pbpermission;

option go_package = "upms/proto/pbpermission";

import "pbcommon/pbcommon.proto";


message PermissionModel{
  int64 id = 1;
  string createdAt = 2;
  string updatedAt = 3;

  int64 parentId = 4; // 父级id
  PermissionType PermissionType = 5; // 类型
  string path = 6; // 路由path
  string name = 7; // 路由name 不要重复
  bool hidden = 8; // 是否隐藏
  string component = 9; // 前端资源路径
  string redirect = 10; // 前端重定向
  string icon = 11; // 图标
  bool keepalive = 12;
  string title = 13; // 展示的名称
  int64 appId = 14; 
}

enum PermissionType {
  PermissionTypeNone = 0;
  MENU = 1;
  BUTTON = 2;
}

message FindPermissionArgs{
  pbcommon.PageInfo pageInfo = 1;
  PermissionModel query = 2;
}

message FindPermissionReply{
  pbcommon.EnumCode code = 1;
  string msg = 2;
  PermissionModel data =3;
  repeated PermissionModel list = 4;
  int64 total = 5;
}

service Permission {
  rpc CreatePermission(PermissionModel) returns(pbcommon.CommonResult){}
  rpc UpdatePermission(PermissionModel) returns(pbcommon.CommonResult){}
  rpc DeletePermission(pbcommon.IdArgs) returns(pbcommon.CommonResult){}
  rpc FindPermissionById(pbcommon.IdArgs) returns(FindPermissionReply){}
  rpc FindPermissionList(FindPermissionArgs) returns(FindPermissionReply){}
}